--- a/views/partials/admins/header.ejs
+++ b/views/partials/admins/header.ejs
@@ -10,9 +10,7 @@
 
     </div>
     <div class="top-actions">
-        <button class="download-btn">
-            <%- currentPage === 'settings' ? '' : 'Download as PDF' %>
-        </button>
+        <a href="/admin/logout"><button class="logoutbtn" type="submit">Logout</button></a>
         <div class="notifications">
             <i class="fas fa-bell"></i>
         </div>
