--- a/public/stylesheet/partials/admins/header.css
+++ b/public/stylesheet/partials/admins/header.css
@@ -25,7 +25,7 @@
     align-items: center;
 }
 
-.download-btn {
+.logoutbtn {
     padding: 8px 15px;
     background-color: #333;
     border: 1px solid var(--border-color);
@@ -34,6 +34,11 @@
     cursor: pointer;
     margin-right: 15px;
     min-width: 100px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.logoutbtn:hover{
+    background-color:#202020 ;
 }
 
 .notifications {
