--- a/views/admin/reports.ejs
+++ b/views/admin/reports.ejs
@@ -42,13 +42,17 @@
                         <option value="custom">Custom Range</option>
                     </select>
                 </div>
-                <div class="filter-group">
-                    <label for="startDate">Start Date:</label>
-                    <input type="date" id="startDate" class="filter-input" disabled>
-                </div>
-                <div class="filter-group">
-                    <label for="endDate">End Date:</label>
-                    <input type="date" id="endDate" class="filter-input" disabled>
+                <div class="filter-group" id="customDateRange">
+                    <div class="date-inputs">
+                        <div>
+                            <label for="startDate">From:</label>
+                            <input type="date" id="startDate" class="filter-input">
+                        </div>
+                        <div>
+                            <label for="endDate">To:</label>
+                            <input type="date" id="endDate" class="filter-input">
+                        </div>
+                    </div>
                 </div>
                 <div class="filter-group">
                     <button class="generate-report-btn" onclick="generateReport()">
