--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -33,7 +33,7 @@
                     <% cartItems.forEach(item => { %>
                         <div class="cart-item">
                             <div class="cart-product">
-                                <img src="/Uploads/products/<%= item.productId.productImage[0] %>" alt="<%= item.productId.productName %>">
+                                <img src="<%= item.productId.productImage[0] %>" alt="<%= item.productId.productName %>">
                                 <span><%= item.productId.productName.toString().split(' ').splice(0,4).join(' ') %></span>
                             </div>
                             <div class="cart-quantity">
