--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -46,7 +46,7 @@
                 <% order.orderedItems.forEach(function(item) { %>
                   <div class="order-item">
                     <div class="item-image">
-                      <img src='/uploads/products/<%= item.product.productImage[0]%>'  alt="<%= item.product.productName %>">
+                      <img src='<%= item.product.productImage[0]%>'  alt="<%= item.product.productName %>">
                     </div>
                     <div class="item-details">
                       <h3 class="item-name"><%= item.product.productName %></h3>
